# bevy_text_gizmos

./: CHANGELOG.md  Cargo.toml  README.md
examples/: 3d_text_gizmos.rs  all_glyphs.rs  anchors.rs  hello_gizmos.rs  hello_world.rs  minimal.rs  stress_text.rs
src/: font.rs  lib.rs
