[package]
name = "bevy_text_gizmos"
version = "0.2.4"
edition = "2024"
description = "Text gizmo implementation for Bevy using stroke fonts."
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["bevy", "text", "gizmos"]
categories = ["game-development", "graphics"]
repository = "https://github.com/ickshonpe/bevy_text_gizmos"

[dependencies]
bevy_color = "0.18"
bevy_math = "0.18"
bevy_gizmos = "0.18"

[dev-dependencies]
bevy = "0.18"
